fix: update styling for view on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,9 @@ body {
     height: 100vh;
     background-color: yellow;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     font-family: Gloria Hallelujah, sans-serif;
 }
 
@@ -40,7 +42,7 @@ h2 {
 }  */
 
 section {
-    margin: auto;
+    margin: 10px auto;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -113,9 +115,10 @@ form h2 {
 
                                         /* Buttons */
 
-#buttons {
-    width: 100%;
+.buttons {
+    width: auto;
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
 }
 
